--- a/toDo.css
+++ b/toDo.css
@@ -65,3 +65,7 @@ textarea:focus{
         outline: 0 !important;
         box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%) !important;
 }
+
+.alert {
+    display: none;
+}
